tests/ui/parser/bound-single-question-mark.rs
fn f<T: ?>() {} //~ ERROR expected identifier, found `>`
